<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_large"
    tools:context=".player.PlayerActivity">

    <ImageView
        android:id="@+id/artworkImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:contentDescription="@string/cd_album_art"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="400dp"
        tools:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artworkImageView"
        tools:text="Very Long Song Title That Might Wrap" />

    <TextView
        android:id="@+id/albumTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:ellipsize="end"
        android:focusable="true"
        android:maxLines="1"
        android:padding="@dimen/spacing_xsmall"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        tools:text="Album Name" />

    <TextView
        android:id="@+id/artistTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:ellipsize="end"
        android:focusable="true"
        android:maxLines="1"
        android:padding="@dimen/spacing_xsmall"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumTextView"
        tools:text="Artist Name" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artistTextView" />

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xsmall"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        app:layout_constraintStart_toStartOf="@id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        tools:text="0:00" />

    <TextView
        android:id="@+id/totalDurationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xsmall"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        app:layout_constraintEnd_toEndOf="@id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        tools:text="3:30" />

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentTimeTextView">

        <ImageButton
            android:id="@+id/previousButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/player_control_icon_size"
            android:layout_height="@dimen/player_control_icon_size"
            android:contentDescription="@string/cd_previous_song"
            android:src="@android:drawable/ic_media_previous"
            app:tint="?attr/colorControlNormal" />

        <ImageButton
            android:id="@+id/seekBackwardButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/player_control_icon_size"
            android:layout_height="@dimen/player_control_icon_size"
            android:layout_marginStart="@dimen/spacing_large"
            android:contentDescription="@string/cd_seek_backward"
            android:src="@android:drawable/ic_media_rew"
            app:tint="?attr/colorControlNormal" />

        <ImageButton
            android:id="@+id/playPauseButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/player_primary_control_size"
            android:layout_height="@dimen/player_primary_control_size"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:contentDescription="@string/cd_play_pause"
            android:src="@android:drawable/ic_media_play"
            app:tint="?attr/colorControlNormal" />

        <ImageButton
            android:id="@+id/seekForwardButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/player_control_icon_size"
            android:layout_height="@dimen/player_control_icon_size"
            android:layout_marginEnd="@dimen/spacing_large"
            android:contentDescription="@string/cd_seek_forward"
            android:src="@android:drawable/ic_media_ff"
            app:tint="?attr/colorControlNormal" />

        <ImageButton
            android:id="@+id/nextButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/player_control_icon_size"
            android:layout_height="@dimen/player_control_icon_size"
            android:contentDescription="@string/cd_next_song"
            android:src="@android:drawable/ic_media_next"
            app:tint="?attr/colorControlNormal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playbackModesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/controlsLayout">

        <ImageButton
            android:id="@+id/shuffleButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/player_control_icon_size"
            android:layout_height="@dimen/player_control_icon_size"
            android:alpha="@fraction/player_control_inactive_alpha"
            android:contentDescription="@string/cd_shuffle_off"
            android:padding="@dimen/player_small_button_padding"
            android:src="@drawable/ic_shuffle"
            app:tint="?attr/colorControlNormal" />

        <ImageButton
            android:id="@+id/restartButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/player_control_icon_size"
            android:layout_height="@dimen/player_control_icon_size"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:contentDescription="@string/cd_restart_track"
            android:padding="@dimen/player_small_button_padding"
            android:src="@drawable/ic_replay"
            app:tint="?attr/colorControlNormal" />

        <ImageButton
            android:id="@+id/repeatButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/player_control_icon_size"
            android:layout_height="@dimen/player_control_icon_size"
            android:alpha="@fraction/player_control_inactive_alpha"
            android:contentDescription="@string/cd_repeat_off"
            android:padding="@dimen/player_small_button_padding"
            android:src="@drawable/ic_repeat"
            app:tint="?attr/colorControlNormal" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showQueueButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:text="@string/player_show_queue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playbackModesLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
