<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/media_list_item_height"
    android:layout_marginHorizontal="@dimen/spacing_medium"
    android:layout_marginVertical="@dimen/spacing_small"
    android:background="@drawable/bg_list_item"
    android:clipToOutline="true"
    android:outlineProvider="background"
    android:paddingHorizontal="@dimen/spacing_medium"
    android:paddingVertical="@dimen/spacing_small">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="@dimen/media_thumbnail_size"
        android:layout_height="@dimen/media_thumbnail_size"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cd_album_art"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        app:layout_constraintStart_toEndOf="@id/cover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/downloadIndicator" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/downloadIndicator"
        android:ellipsize="end"
        android:maxLines="1" />

    <TextView
        android:id="@+id/trailing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toStartOf="@id/downloadIndicator"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/downloadIndicator"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:layout_marginEnd="@dimen/spacing_xsmall"
        android:contentDescription="@string/cd_downloaded_indicator"
        android:src="@drawable/ic_downloaded"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/favouriteButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/favouriteButton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="@dimen/icon_size_large"
        android:layout_height="@dimen/icon_size_large"
        android:background="@android:color/transparent"
        android:contentDescription="@string/song_favourite_button_content_description"
        android:padding="@dimen/spacing_xsmall"
        android:src="@drawable/ic_favourite_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/optionsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorControlNormal" />

    <ImageButton
        android:id="@+id/optionsButton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="@dimen/icon_size_large"
        android:layout_height="@dimen/icon_size_large"
        android:background="@android:color/transparent"
        android:contentDescription="@string/song_options_content_description"
        android:padding="@dimen/spacing_xsmall"
        android:src="@drawable/ic_more_vert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorControlNormal" />
</androidx.constraintlayout.widget.ConstraintLayout>
